--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
     <div class="container">
         <div class="search-box">
-            <i class="fa-solid fa-location-dot"></i>
-            <input type="text" placeholder="enter your location">
+            <input type="text" id="location-input" placeholder="Enter your location">
+    <i onclick="getLocation()" id="location-button" class="fa fa-location-arrow"></i>
             <button class="fa-solid fa-magnifying-glass"></button>
         </div>
 
@@ -50,7 +50,9 @@
         </div>
 
     </div>
-
+ 
+    
+    
     <script src="https://kit.fontawesome.com/7c8801c017.js" crossorigin="anonymous"></script>
     <script src="script.js"></script>
 </body>
