--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="container">
         <div class="search-box">
             <input type="text" id="location-input" placeholder="Enter your location">
-    <i onclick="getLocation()" id="location-button" class="fa fa-location-arrow"></i>
+    <i id="location-button" class="fa fa-location-arrow"></i>
             <button class="fa-solid fa-magnifying-glass"></button>
         </div>
 
